# FreezingCore

./: .gitmodules  CMakeLists.txt  Camera.h  Camera.hpp  HID.cpp  Keyboard.cpp  Keyboard.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Shader.cpp  Shader.h  config.h.in  enums.h  helloGL.vcxproj  helloGL.vcxproj.filters  hellogl.suppress  main.cpp  shader.frag  shader.vert
Debug/: vc141.idb
Debug/helloGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  helloGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Camera.h  HID.h  Mesh.h  Model.h  SceneGraph.h  Shader.h
resources/Crate/: Crate1.mtl
shaders/: 1.model_loading.frag  basic.vert  blinn-phong.frag  light.frag  phong.frag  shader.frag  shader.vert  shader0.frag  shader1.vert
src/: Camera.cpp  Keyboard.cpp  Mesh.cpp  Model.cpp  SceneGraph.cpp  Shader.cpp  main.cpp  utils.cpp
